<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context="com.peipeiyang.todolist.AddActivityFragment"
    tools:showIn="@layout/activity_add">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add New Item"
        android:id="@+id/addtitle"
        android:textSize="@dimen/size30"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="normal|bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/note_inputControls"
        android:shrinkColumns="1"
        android:stretchColumns="1"
        android:layout_below="@+id/addtitle">
        <TableRow
             android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:id="@+id/titleTV"

                android:textSize="@dimen/size20"
                android:layout_column="0" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/titleET"
                android:textSize="@dimen/size20"

                android:layout_column="1" />

        </TableRow>
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                android:text="@string/description"
                android:id="@+id/descriptionTV"
                android:textSize="@dimen/size20"
                android:layout_column="0" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/descriptionET"
                android:textSize="@dimen/size20"
                android:layout_column="1" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duedate"
                android:id="@+id/dateTV"
                android:textSize="@dimen/size20"
                android:layout_column="0" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dateET"
                android:textSize="@dimen/size20"
                android:layout_column="1" />

        </TableRow>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:id="@+id/categoryTV"
        android:textSize="@dimen/size20"
                android:layout_column="0" />

            <RadioGroup
                android:id="@+id/note_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1">

                <RadioButton
                    android:id="@+id/note_study"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/study" />

                <RadioButton
                    android:id="@+id/note_work"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/work" />

                <RadioButton
                    android:id="@+id/note_daily"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dailylife" />
            </RadioGroup>

        </TableRow>
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/additionalinfo"
        android:id="@+id/addtionalTV"
        android:textSize="@dimen/size20"
                android:layout_column="0" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addtionalET"
                android:textSize="@dimen/size20"
                android:layout_column="1" />

        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/saveBT"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp" />


</RelativeLayout>
